--- a/CSC223-Lab4-JSON/.classpath
+++ b/CSC223-Lab4-JSON/.classpath
@@ -6,6 +6,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="lib/json-20220320.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
